--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,5 @@
 # 1. Stage: build the jar
-FROM maven:3.9.3-eclipse-temurin-21 AS build
+FROM maven:3.9.3-jdk-21 AS build
 
 # Set working directory
 WORKDIR /app
