--- a/auth-service/deployment/k8s/deployment.yaml
+++ b/auth-service/deployment/k8s/deployment.yaml
@@ -13,8 +13,21 @@ spec:
       labels:
         app: auth-service
     spec:
+      restartPolicy: Always        # автоматичний перезапуск при падінні
       containers:
         - name: auth-service
           image: localhost:5000/auth-service:latest
           ports:
             - containerPort: 8081
+          livenessProbe:          # перевірка “живучості” пода
+            httpGet:
+              path: /actuator/health
+              port: 8081
+            initialDelaySeconds: 15
+            periodSeconds: 10
+          readinessProbe:         # перевірка готовності пода приймати трафік
+            httpGet:
+              path: /actuator/health
+              port: 8081
+            initialDelaySeconds: 10
+            periodSeconds: 5
