--- a/config-service/src/main/resources/configs/post-service.yaml
+++ b/config-service/src/main/resources/configs/post-service.yaml
@@ -3,8 +3,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postdb
-    username: post
+    url: jdbc:postgresql://localhost:5432/social
+    username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
   jpa:
